<resources>
    <string name="app_name" translatable="false">High/Low</string>
    <string name="title_profile">Profile</string>
    <string name="title_feed">Feed</string>
    <string name="title_about">About</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_account_section_header">Account</string>
    <string name="about_account_section_logout">Log Out</string>
    <string name="about_feedback_section_header">Feedback</string>
    <string name="about_feedback_section_report_a_bug">Report a bug</string>
    <string name="about_settings_section_header">Settings</string>
    <string name="about_settings_section_push_notification_settings">Push Notification Settings</string>
    <string name="about_support_section_header">Support</string>
    <string name="about_support_section_our_website">Our Website</string>
    <string name="about_support_section_contact_us">Contact Us</string>
    <string name="about_agreements_section_header">Agreements</string>
    <string name="about_agreements_section_privacy_policy">Privacy Policy</string>
    <string name="about_agreements_section_terms_of_service">Terms of Service</string>
    <string name="based_on_your_interests">Based on your interests</string>
    <string name="agreements_statement">In order to continue, you must accept our privacy policy and terms of service</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="decline">Decline</string>
    <string name="said">said:</string>
    <string name="more_options">More Options</string>
    <string name="logo">Logo</string>
    <string name="close">Close</string>
    <string name="create_an_account">Create An Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="message">Message</string>
    <string name="enter_text">Enter text</string>
    <string name="submit">Submit</string>
    <string name="done">Done</string>
    <string name="post_image">Post Image</string>
    <string name="enter_text_here">Enter text here</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name">Name</string>
    <string name="profile_image">Profile Image</string>
    <string name="interests">Interests</string>
    <string name="edit">Edit</string>
    <string name="bio">Bio</string>
    <string name="no_items_in_your_feed_yet">No items in your feed yet!</string>
    <string name="flag_warning">Flag warning</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="send_confirmation_email">Send Confirmation Email</string>
    <string name="add_friends">Add Friends</string>
    <string name="posted_on">Posted on</string>
    <string name="high">High</string>
    <string name="no_content_provided">No content provided</string>
    <string name="low">Low</string>
    <string name="is_private">Private</string>
    <string name="flag">Flag</string>
    <string name="zero">0</string>
    <string name="like">Like</string>
    <string name="show_all_comments">Show all comments</string>
    <string name="leave_a_comment">Leave a comment…</string>
    <string name="send">Send</string>
    <string name="icon">Icon</string>
    <string name="add_friend">Add Friend</string>
    <string name="tell_us_what_you_are_interested_in">Tell us what you\'re interested in!</string>
    <string name="interest_explanation">We use this to help you connect with other users!</string>
    <string name="absolutely">Absolutely!</string>
    <string name="later">Later</string>
    <string name="has_requested_your_friendship">has requested your friendship</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="pending_requests">Pending Requests</string>
    <string name="no_highlows">Your High/Lows will show up here</string>
    <string name="streak">Streak</string>
    <string name="friends">Friends</string>
    <string name="daily_reminder_notification">Daily Reminder Notification</string>
    <string name="not_scheduled">Not Scheduled</string>
    <string name="new_friend_requests">New Friend Requests</string>
    <string name="friend_request_accepted">Friend Request Accepted</string>
    <string name="new_feed_items">New Feed Items</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="subject">Subject</string>
    <string name="bug_message">Message</string>
    <string name="describe_the_bug">Describe the bug...</string>
    <string name="skip">SKIP</string>
    <string name="tutorial_image">Tutorial Image</string>
    <string name="get_started">Get Started</string>
    <string name="navigate">Navigate</string>
    <string name="unfriend">Unfriend</string>
    <string name="your_friends">Your Friends</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="please_try_again">Please try again</string>
    <string name="forgot_password_message">Sin preocupaciones. Sucede. Simplemente ingrese su dirección de correo electrónico a continuación y le enviaremos un mensaje para confirmar que desea restablecer su contraseña. (Asegúrese de revisar su carpeta de spam)</string>
    <string name="title_home">Home</string>
    <string name="unflag_title">Confirm Unflag?</string>
    <string name="set_theme">Set Theme</string>
    <string name="darkTheme">Dark Theme</string>
    <string name="auto">Auto</string>
    <string name="diary_type_icon">Diary Type Icon</string>
    <string name="title_activity_sharing_options">Sharing Options</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="compliance_notice_billing">By continuing, you agree to our <a href='https://gethighlow.com/eula'>Terms of Service</a> and <a href='https://gethighlow.com/privacy'>Privacy Policy</a></string>
</resources>
