<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/logo_light"
                android:layout_marginTop="20dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/close_white"
                android:background="@color/transparent"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:layout_marginTop="20dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:onClick="close"
                android:tint="@color/colorPrimary"
                android:contentDescription="@string/close" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/dark_gray"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_message"
            android:textAlignment="center"
            android:layout_marginTop="5dp"/>
        <com.gethighlow.highlowandroid.CustomViews.BaseComponents.TextInput
            android:layout_width="250dp"
            android:layout_height="50dp"
            custom:title="@string/email"
            custom:inputType="text"
            custom:inputTheme="other"
            android:layout_marginTop="10dp"
            android:id="@+id/emailInput"/>

        <com.gethighlow.highlowandroid.CustomViews.BaseComponents.HLButton
            android:layout_width="250dp"
            android:layout_height="50dp"
            custom:buttonTheme="reg"
            android:text="@string/send_confirmation_email"
            android:layout_marginTop="10dp"
            android:id="@+id/sendConfirmation"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:layout_marginTop="5dp"
            android:id="@+id/errors"/>
    </LinearLayout>
</ScrollView>