<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Tabs.Home.AgreementsActivity"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:text="@string/agreements_statement"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/terms_of_service"
        android:background="@color/transparent"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:onClick="openTermsOfService" />
    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/privacy_policy"
        android:background="@color/transparent"
        android:textColor="@color/colorPrimary"
        android:textAllCaps="false"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:onClick="openPrivacyPolicy"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="10dp">
        <com.gethighlow.highlowandroid.CustomViews.BaseComponents.HLButton
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="40dp"
            android:text="@string/accept"
            app:buttonTheme="pink"
            android:layout_marginEnd="20dp"
            android:id="@+id/accept"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="40dp"
            android:text="@string/decline"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:onClick="decline"/>
    </LinearLayout>
</LinearLayout>