<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Tabs.Home.AgreementsActivity"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:text="@string/tell_us_what_you_are_interested_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:text="@string/interest_explanation"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="10dp">
        <com.gethighlow.highlowandroid.CustomViews.BaseComponents.HLButton
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:layout_height="40dp"
            android:text="@string/absolutely"
            app:buttonTheme="pink"
            android:layout_marginEnd="20dp"
            android:id="@+id/absolutely"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="40dp"
            android:text="@string/later"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:onClick="decline"/>
    </LinearLayout>
</LinearLayout>