<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/aboutDivider">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textAlignment="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:padding="15dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_text"
                android:textColorHint="?attr/gray2white"
                android:minHeight="240dp"
                android:background="?attr/bgColor"
                android:gravity="top"
                android:padding="20dp"
                android:textSize="20sp"
                android:id="@+id/edit_comment_message"
                android:importantForAutofill="no"
                android:inputType="text" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <com.gethighlow.highlowandroid.CustomViews.BaseComponents.HLButton
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    custom:buttonTheme="pink"
                    android:id="@+id/edit_comment_submit_button"
                    android:text="@string/submit"
                    android:layout_margin="10dp"/>
                <com.gethighlow.highlowandroid.CustomViews.BaseComponents.HLButton
                    android:layout_width="140dp"
                    android:layout_height="50dp"
                    android:text="@string/cancel"
                    custom:buttonTheme="white"
                    android:layout_margin="10dp"
                    android:id="@+id/cancel_edit"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>