<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:paddingVertical="5dp">
    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:riv_corner_radius="100dp"
        android:layout_marginStart="10dp"
        android:id="@+id/userImage"
        android:scaleType="centerCrop"/>
    <TextView
        android:layout_width="0dp"
        android:layout_weight="0.7"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:id="@+id/userName"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginEnd="10dp"
        android:tint="@color/gray"
        android:layout_height="wrap_content"
        android:src="@drawable/navigate_arrow"
        android:id="@+id/chevron"
        android:contentDescription="@string/navigate" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:src="@drawable/unfriend"
        android:id="@+id/unfriend"
        android:contentDescription="@string/unfriend" />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:src="@drawable/add_friend"
        android:id="@+id/addAsFriend"
        android:contentDescription="@string/add_friend" />
</LinearLayout>