<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/bgColor">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?attr/colorPrimary2transparent">
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="2.5dp"
                    android:background="?attr/transparent2buttonBorder"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:text="@string/cancel"
                    android:onClick="dismiss"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="2.5dp"
                    android:layout_marginRight="5dp"
                    android:background="?attr/transparent2buttonBorder"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textAllCaps="false"
                    android:text="@string/done"
                    android:onClick="done"/>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/ic_add_image"
                android:tint="?attr/gray2lightGray"
                android:scaleType="centerInside"
                android:background="?attr/highLowDivider"
                android:id="@+id/add_image"
                android:onClick="pickImage"
                android:contentDescription="@string/post_image" />
            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/colorPrimary"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:hint="@string/enter_text_here"
                android:textColorHint="?attr/gray2white"
                android:background="@color/transparent"
                android:id="@+id/text"
                android:importantForAutofill="no"
                android:inputType="text"/>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/overlay"
        android:id="@+id/loader">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/white"/>
    </RelativeLayout>
</RelativeLayout>