<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_in_scrollview">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/angled_gradient"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="50dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:weightSum="100">
                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/logo_triangles"
                    android:contentDescription="@string/logo" />
            </LinearLayout>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:fontFamily="@font/chalkboard_se"
                android:textSize="40sp" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:layout_marginTop="5dp"
            android:id="@+id/errors"/>

        <com.gethighlow.highlowandroid.CustomViews.BaseComponents.TextInput
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            custom:title="Email"
            custom:inputType="email"
            android:id="@+id/emailInput"/>
        <com.gethighlow.highlowandroid.CustomViews.BaseComponents.TextInput
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            custom:title="Password"
            custom:inputType="password"
            android:id="@+id/passwordInput"/>



        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/forgot_password"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:id="@+id/forgot_password"
            android:onClick="openForgotPasswordActivity"/>

        <com.gethighlow.highlowandroid.CustomViews.BaseComponents.HLButton
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/common_signin_button_text"
            custom:buttonTheme="regular"
            android:id="@+id/sign_in_button"
            android:onClick="signIn"/>




        <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/create_account"
            android:background="@color/transparent"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            style="?android:attr/borderlessButtonStyle"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:id="@+id/create_account_button"
            android:onClick="openCreateAccountActivity"/>

        <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/googleSignIn"/>

    </LinearLayout>
</ScrollView>